fix some spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,10 +45,6 @@ html{
 	margin: 0.7em;
 	font-size:	1.1em;
 }
-header{
-	
-
-}
 *{
 	box-sizing: border-box;
 }
@@ -245,8 +241,6 @@ ul li{
 	color:#2EC4B6;
 	text-decoration:none;
 }
-
-
 .shadow {
     -webkit-box-shadow: 0px 0px 10px 5px black;
     -moz-box-shadow: 0px 10px 5px 5px black;
